<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/dialog"
    android:layout_height="match_parent"
    android:background="@drawable/foto">

    <RelativeLayout
        android:layout_width="369dp"
        android:layout_height="541dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="34dp"
        android:alpha="0.8"
        android:background="#FFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/krona_one"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/actor"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/about_us"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/azulin"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="115dp"
            android:fontFamily="@font/actor"
            android:text="@string/lorem"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:typeface="sans" />

        <ImageView
            android:id="@+id/closeDialogImg"
            android:layout_width="73dp"
            android:layout_height="74dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="146dp"
            android:layout_marginTop="453dp"
            android:contentDescription="close"
            android:src="@drawable/exit"
            tools:srcCompat="@drawable/exit" />
    </RelativeLayout>
</RelativeLayout>